# gala-switch

./: .editorconfig  .gitignore  README.md  meson.build  package-lock.json  package.json  uncrustify.cfg
data/: meson.build  org.pantheon.desktop.gala.plugins.switch.gschema.xml
lib/: Main.vala
meson/: post_install.py
meta/: README.md.njk
vapi/: Clutter-6-custom.vala  Cogl-4-custom.vala  Cogl-5-custom.vala  Cogl-6-custom.vala  Cogl-7-custom.vala
